src/objects/FMA_Review_Form__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FMA Review Forms</relationshipLabel>
        <relationshipName>FMA_Review_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Notes__c</fullName>
        <label>Call Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Concentrated_Positions_Comments__c</fullName>
        <label>Concentrated Positions Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Concentrated_Positions_pl__c</fullName>
        <label>Concentrated Positions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                    <default>true</default>
                    <label>Not Applicable</label>
                </value>
                <value>
                    <fullName>Reviewed, No Change</fullName>
                </value>
                <value>
                    <fullName>Review Changes as Follows</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Create_Date__c</fullName>
        <formula>IF(NOT(ISBLANK(Legacy_CreatedDate__c)),Legacy_CreatedDate__c,CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_Review__c</fullName>
        <formula>if( DATEVALUE( CreatedDate ) &gt; Rep__r.FMA_Review_Date__c, &quot;Current&quot;, &quot;Former&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Review</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_Cash_Balance_Comments__c</fullName>
        <label>High Cash Balance Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>High_Cash_Balance_pl__c</fullName>
        <label>High Cash Balance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                    <default>true</default>
                    <label>Not Applicable</label>
                </value>
                <value>
                    <fullName>Reviewed, No Change</fullName>
                </value>
                <value>
                    <fullName>Review Changes as Follows</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Household_Account_Numbers__c</fullName>
        <formula>Account__r.Account_Numbers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Household Account Numbers</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Household_Rep_Numbers__c</fullName>
        <formula>Account__r.Rep_Numbers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Household Rep Numbers</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Houseshold_Plans__c</fullName>
        <formula>Account__r.Plans__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Houseshold Plans</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investment_Objective_and_Risk_comments__c</fullName>
        <label>Investment Objective and Risk Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Investment_Objective_and_Risk_pl__c</fullName>
        <label>Investment Objective and Risk Tolerance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                    <default>true</default>
                    <label>Not Applicable</label>
                </value>
                <value>
                    <fullName>Reviewed, No Change</fullName>
                </value>
                <value>
                    <fullName>Review Changes as Follows</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Investment_and_Performance_Comments__c</fullName>
        <label>Investment and Performance Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Investment_and_Performance_pl__c</fullName>
        <label>Investment and Performance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                    <default>true</default>
                    <label>Not Applicable</label>
                </value>
                <value>
                    <fullName>Reviewed, No Change</fullName>
                </value>
                <value>
                    <fullName>Review Changes as Follows</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_CreatedDate__c</fullName>
        <label>Legacy Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Personal_Client_Info_co__c</fullName>
        <label>Personal Client Info Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Personal_Client_Info_pl__c</fullName>
        <label>Personal Client Info</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                    <default>true</default>
                    <label>Not Applicable</label>
                </value>
                <value>
                    <fullName>Reviewed, No Change</fullName>
                </value>
                <value>
                    <fullName>Review Changes as Follows</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rep</label>
        <referenceTo>Rep__c</referenceTo>
        <relationshipLabel>FMA Review Forms</relationshipLabel>
        <relationshipName>FMA_Review_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Horizon_and_Liquidity_Needs_Comment__c</fullName>
        <label>Time Horizon and Liquidity Needs Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Time_Horizon_pl__c</fullName>
        <label>Time Horizon and Liquidity Needs</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                    <default>true</default>
                    <label>Not Applicable</label>
                </value>
                <value>
                    <fullName>Reviewed, No Change</fullName>
                </value>
                <value>
                    <fullName>Review Changes as Follows</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trading_Low_Trading_Comments__c</fullName>
        <label>Trading/Low Trading Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Trading_Low_Trading_pl__c</fullName>
        <label>Trading/Low Trading</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                    <default>true</default>
                    <label>Not Applicable</label>
                </value>
                <value>
                    <fullName>Reviewed, No Change</fullName>
                </value>
                <value>
                    <fullName>Review Changes as Follows</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>FMA Review Form</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FMA_Form-{0000}</displayFormat>
        <label>FMA Review Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FMA Review Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>